--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.7",
     "downloadjs": "^1.4.7",
+    "encoding": "^0.1.13",
+    "firebase": "^10.3.0",
     "next": "13.4.19",
     "pdf-lib": "^1.17.1",
     "react": "18.2.0",
